--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<link
 			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg"
+			type="image/png"
+			href="/favicon.png"
 		/>
 		<link
 			rel="preconnect"
@@ -24,7 +24,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Vite + React + TS</title>
+		<title>MaterialKollen</title>
 	</head>
 	<body>
 		<div id="root"></div>
